-- Copyright   : (C) Keera Studios Ltd, 2013
-- License     : BSD3
-- Maintainer  : support@keera.co.uk

Name:                keera-callbacks
Version:             0.1
Synopsis:            Mutable memory locations with callbacks
Description:         Mutable memory locations with handlers that are executed when the
                     shared values are modified.
License:             BSD3
License-file:        LICENSE
Author:              Ivan Perez
Maintainer:          ivan.perez@keera.es
Category:            Concurrency

Build-type:          Simple

Cabal-version:       >=1.2


Library

  Exposed-modules:     Data.CBRef
                       Data.CBMVar

  hs-source-dirs: src/

  ghc-options: -Wall -fno-warn-unused-do-bind -O2

  Build-depends: base >= 4.0 && < 5.0
               , mtl
