-- Copyright   : (C) Keera Studios Ltd, 2013
-- License     : BSD3
-- Maintainer  : support@keera.co.uk

name:                keera-callbacks
version:             0.1
synopsis:            Mutable memory locations with callbacks
description:         Mutable memory locations with handlers that are executed when the
                     shared values are modified.
license:             BSD3
license-file:        LICENSE
author:              Ivan Perez
maintainer:          ivan.perez@keera.es
category:            Concurrency

build-type:          Simple

cabal-version:       >=1.2


library

  exposed-modules:     Data.CBRef
                       Data.CBMVar

  hs-source-dirs: src/

  ghc-options: -Wall -fno-warn-unused-do-bind -O2

  build-depends: base >= 4.0 && < 5.0
               , mtl
