-- Copyright   : (C) Keera Studios Ltd, 2013
-- License     : BSD3
-- Maintainer  : support@keera.co.uk

cabal-version:       >= 1.2
build-type:          Simple

name:                keera-callbacks
version:             0.1
author:              Ivan Perez
maintainer:          ivan.perez@keera.es
license:             BSD3
license-file:        LICENSE
category:            Concurrency
synopsis:            Mutable memory locations with callbacks
description:
  Mutable memory locations with handlers that are executed when the shared
  values are modified.


library

  exposed-modules:
    Data.CBRef
    Data.CBMVar

  build-depends:
      base >= 4.0 && < 5.0
    , mtl

  hs-source-dirs:
    src/

  ghc-options:
    -Wall -fno-warn-unused-do-bind -O2
